# SAASound

./: .gitignore  CMakeLists.txt  INSTALL  INSTALL.txt  LICENCE  LICENCE.TXT  LICENCE.txt  Licence.txt  Makefile.am  Makefile.in  README  README.MD  SAAAmp.cpp  SAAAmp.h  SAAEnv.cpp  SAAEnv.h  SAAFreq.cpp  SAAFreq.h  SAANoise.cpp  SAANoise.h  SAASndC.h  SAASound.DEF  SAASound.dsp  SAASound.h  SAASound.lib  SAASound.rc  SAASoundImplementation.cpp  SAASoundImplementation.h  SaaSndC.cpp  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  libSAASound.pc.in  package.qpg  readme.txt  types.h
.github/workflows/: cmake.yml
BeOS/: SAASound.proj
Include/: Makefile.am  SAASound.h
OSX/: Info.plist  SAASound_Prefix.pch
OSX/English.lproj/: InfoPlist.strings
OSX/SAASound.xcodeproj/: project.pbxproj
Src/: Makefile.am  SAAAmp.cpp  SAAAmp.h  SAAEnv.cpp  SAAEnv.h  SAAFreq.cpp  SAAFreq.h  SAANoise.cpp  SAANoise.h  SAASndC.cpp  SAASound.cpp  SAASoundImplementation.cpp  SAASoundImplementation.h  types.h
VC6/: SAASound.def  SAASound.dsp
VS17/: .gitignore  SAASound.def  SAASound.rc  SAASound.sln
VS17/SAASound/: SAASound.aps  SAASound.cfg  SAASound.rc  SAASound.vcxproj  SAASound.vcxproj.filters
VS17/SAASound/Profiles/x86/Release/: SAASound!1.pgc  SAASound.pgd
VS6/: SAASound.dsp
Win32/: SAASound.dsp  SAASound.dsw  SAASound.rc
autom4te.cache/: output.0  requests  traces.0
cmake/: FindSAASound.cmake
config/: ltmain.sh
eVC3/: SAASound.def  SAASound.rc  SAASound.vcp  SAASound.vcw
eVC4/: SAASound.def  SAASound.rc  SAASound.vcp  SAASound.vcw
include/: Makefile.in  SAASound.h
resources/: SAASound.cfg  SAASound.def
src/: Makefile.am  Makefile.in  SAAAmp.cpp  SAAAmp.h  SAAConfig.cpp  SAAConfig.h  SAADevice.cpp  SAADevice.h  SAAEnv.cpp  SAAEnv.h  SAAFreq.cpp  SAAFreq.h  SAAImpl.cpp  SAAImpl.h  SAANoise.cpp  SAANoise.h  SAASndC.cpp  SAASndC.h  SAASound.cpp  config.h.in  defns.h  types.h
src/minIni/: minGlue.h  minGlue_stdio_tchar.h  minIni.c  minIni.h
tools/: levels.py
win32/: SAASound.rc.in
