dnl Process this file with autoconf to produce a configure script.
AC_INIT(INSTALL)

# Making releases:
#   SAASOUND_MICRO_VERSION += 1;
#   SAASOUND_INTERFACE_AGE += 1;
#   SAASOUND_BINARY_AGE += 1;
# if any functions have been added, set SAASOUND_INTERFACE_AGE to 0.
# if backwards compatibility has been broken,
# set SAASOUND_BINARY_AGE and SAASOUND_INTERFACE_AGE to 0.
#
SAASOUND_MAJOR_VERSION=3
SAASOUND_MINOR_VERSION=1
SAASOUND_MICRO_VERSION=1
SAASOUND_INTERFACE_AGE=0
SAASOUND_BINARY_AGE=0
SAASOUND_VERSION=$SAASOUND_MAJOR_VERSION.$SAASOUND_MINOR_VERSION.$SAASOUND_MICRO_VERSION

AC_SUBST(SAASOUND_MAJOR_VERSION)
AC_SUBST(SAASOUND_MINOR_VERSION)
AC_SUBST(SAASOUND_MICRO_VERSION)
AC_SUBST(SAASOUND_INTERFACE_AGE)
AC_SUBST(SAASOUND_BINARY_AGE)
AC_SUBST(SAASOUND_VERSION)


LT_RELEASE=$SAASOUND_MAJOR_VERSION.$SAASOUND_MINOR_VERSION
LT_CURRENT=`expr $SAASOUND_MICRO_VERSION - $SAASOUND_INTERFACE_AGE`
LT_REVISION=$SAASOUND_INTERFACE_AGE
LT_AGE=`expr $SAASOUND_BINARY_AGE - $SAASOUND_INTERFACE_AGE`

AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)


AM_INIT_AUTOMAKE(SAASound, $SAASOUND_VERSION)


dnl Checks for typedefs, structures, and compiler characteristics.
AM_PROG_LIBTOOL
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_C_CONST
AC_C_INLINE
AC_STDC_HEADERS

CFLAGS="$CFLAGS -Wall -O2"

dnl Initialize the compiler and linker flags for SAASound applications
dnl SAASOUND_CFLAGS=""
SAASOUND_LIBS="-lSAASound"

dnl SYSTEM_LIBS="$SYSTEM_LIBS $MATHLIB"

# Set runtime shared library paths as needed
if test $ARCH = linux -o $ARCH = freebsd -o $ARCH = bsdi; then
  SAASOUND_RLD_FLAGS="-Wl,-rpath,\${exec_prefix}/lib"
fi

if test $ARCH = solaris; then
  SAASOUND_RLD_FLAGS="-R\${exec_prefix}/lib"
fi

AC_SUBST(SYSTEM_LIBS)

dnl Expand the cflags and libraries needed by apps using SAASound
AC_SUBST(SAASOUND_CFLAGS)
AC_SUBST(SAASOUND_LIBS)
AC_SUBST(SAASOUND_RLD_FLAGS)

dnl Expand the libraries needed for static linking
AC_SUBST(SYSTEM_LIBS)
dnl Expand the include directories for building SAASound
CFLAGS="$CFLAGS -I\$(top_srcdir)/include"
CXXFLAGS="$CFLAGS"

AC_OUTPUT(Makefile src/Makefile include/Makefile)
