dnl Process this file with autoconf to produce a configure script.
AC_INIT(README)
AC_CONFIG_AUX_DIR(config)
AC_CANONICAL_SYSTEM
AC_PREFIX_DEFAULT(/usr)

SAA_MAJOR_VERSION=3
SAA_MINOR_VERSION=1
SAA_MICRO_VERSION=2
SAA_INTERFACE_AGE=1
SAA_BINARY_AGE=1
SAA_VERSION=$SAA_MAJOR_VERSION.$SAA_MINOR_VERSION.$SAA_MICRO_VERSION

AC_SUBST(SAA_MAJOR_VERSION)
AC_SUBST(SAA_MINOR_VERSION)
AC_SUBST(SAA_MICRO_VERSION)
AC_SUBST(SAA_INTERFACE_AGE)
AC_SUBST(SAA_BINARY_AGE)
AC_SUBST(SAA_VERSION)

# libtool versioning
LT_RELEASE=$SAA_MAJOR_VERSION.$SAA_MINOR_VERSION
LT_CURRENT=`expr $SAA_MICRO_VERSION - $SAA_INTERFACE_AGE`
LT_REVISION=$SAA_INTERFACE_AGE
LT_AGE=`expr $SAA_BINARY_AGE - $SAA_INTERFACE_AGE`

AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

AM_INIT_AUTOMAKE(SAASound, $SAA_VERSION)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_LIBTOOL_WIN32_DLL
AC_PROG_LIBTOOL
AC_STDC_HEADERS

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_EXEEXT
AC_OBJEXT

SAASOUND_LIBS="-lSAASound"
AC_SUBST(SAASOUND_LIBS)

CFLAGS="$CFLAGS -Wall -O2 -I\$(top_srcdir)/include"
CXXFLAGS="$CFLAGS"

AC_OUTPUT(Makefile src/Makefile include/Makefile)

